# ChangeLog for sys-fs/xfsdump
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.53 2007/06/16 03:29:27 angelos Exp $

  16 Jun 2007; Christoph Mende <angelos@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable on amd64 wrt security bug 180367

  13 Jun 2007; Mike Frysinger <vapier@gentoo.org>
  +files/xfsdump-2.2.45-LDFLAGS.patch, xfsdump-2.2.45.ebuild:
  Respect LDFLAGS while linking the library.

  03 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfsdump-2.2.45.ebuild:
  ppc stable, bug #180367

  02 Jun 2007; Markus Rothe <corsair@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable on ppc64; bug #180367

  01 Jun 2007; Jeroen Roovers <jer@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable for HPPA (bug #180367).

  31 May 2007; Raúl Porcel <armin76@gentoo.org> xfsdump-2.2.45.ebuild:
  alpha/ia64/x86 stable wrt security #180367

*xfsdump-2.2.45 (31 May 2007)

  31 May 2007; Mike Frysinger <vapier@gentoo.org> +xfsdump-2.2.45.ebuild:
  Version bump #180367.

  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfsdump-2.2.42.ebuild:
  ppc stable, bug #159469

  30 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> xfsdump-2.2.42.ebuild:
  Stable on Alpha, bug 159469.

  11 Dec 2006; Peter Weller <welp@gentoo.org> xfsdump-2.2.42.ebuild:
  Added amd64 keyword wrt bug #156840

  07 Dec 2006; Guy Martin <gmsoft@gentoo.org> xfsdump-2.2.42.ebuild:
  Stable on hppa.

  07 Dec 2006; Markus Rothe <corsair@gentoo.org> xfsdump-2.2.42.ebuild:
  Stable on ppc64

  07 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  xfsdump-2.2.42.ebuild:
  stable x86, bug #156840

*xfsdump-2.2.42 (27 Sep 2006)

  27 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/xfsdump-2.2.42-Makefile-deps.patch, +xfsdump-2.2.42.ebuild:
  Version bump.

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> xfsdump-2.2.33-r1.ebuild:
  Marked stable on mips.
