@@ -19,14 +19,14 @@ EBUILD xfsdump-2.2.42.ebuild 1141 RMD160 03206aaab1741d9cd5e5f548b67362044dae33b
 MD5 c9f7e52fb185cb7a1ed6e4ca0e4eb54f xfsdump-2.2.42.ebuild 1141
 RMD160 03206aaab1741d9cd5e5f548b67362044dae33ba xfsdump-2.2.42.ebuild 1141
 SHA256 700c1b5a04b5cf94dcdc5a26e896efd15fb2a5993279726409dc0a4996d5f8dd xfsdump-2.2.42.ebuild 1141
-EBUILD xfsdump-2.2.45.ebuild 1135 RMD160 930746a034db096ee041872932af44d83d582a31 SHA1 bb93c4f6bc6fffd4a0fd8eff83cab6c74cdc6721 SHA256 9474b440cf225c1c0804c1b0015a37293da308c0a9f4c1998e89f5996493cad4
-MD5 9e8dfb53f246d18c090eaa601dcff897 xfsdump-2.2.45.ebuild 1135
-RMD160 930746a034db096ee041872932af44d83d582a31 xfsdump-2.2.45.ebuild 1135
-SHA256 9474b440cf225c1c0804c1b0015a37293da308c0a9f4c1998e89f5996493cad4 xfsdump-2.2.45.ebuild 1135
-MISC ChangeLog 8404 RMD160 65f29f2cdc579a3a62b9f34fa83e55ae6b4d6d71 SHA1 263e7f6d430034c6b3a48d274ebb4d0ee8658368 SHA256 0a69b0e27a1a8b79325b25ddbdeda9735e0e7f7c42c880489f296cfd4fd96580
-MD5 45f6ba692821c766aa93b522fa8d7212 ChangeLog 8404
-RMD160 65f29f2cdc579a3a62b9f34fa83e55ae6b4d6d71 ChangeLog 8404
-SHA256 0a69b0e27a1a8b79325b25ddbdeda9735e0e7f7c42c880489f296cfd4fd96580 ChangeLog 8404
+EBUILD xfsdump-2.2.45.ebuild 1174 RMD160 f248aa21b68461e088a57c26986158937a8b7383 SHA1 63cf5e02ea07df2ba6df6a2c73efb3bc161780d3 SHA256 8d1c1921c2f716f70c5129adf7fe53f1633ab0800f65621fc034cef20cb86f04
+MD5 19226c231e6d3c2d99c2ff058f7f60e8 xfsdump-2.2.45.ebuild 1174
+RMD160 f248aa21b68461e088a57c26986158937a8b7383 xfsdump-2.2.45.ebuild 1174
+SHA256 8d1c1921c2f716f70c5129adf7fe53f1633ab0800f65621fc034cef20cb86f04 xfsdump-2.2.45.ebuild 1174
+MISC ChangeLog 8518 RMD160 77a15e9d8a31a9f215ca6b23f9b690d61e8a046f SHA1 1f01fdd38a3a8d8ecb7316e9bfdb141c7c840820 SHA256 b17cb078639c7618f553ce65b8b3510517a8fe0dbf687b5c3fe21ad7f7f8ecc6
+MD5 93f7914a6409a434c4aecaf38cc7cf25 ChangeLog 8518
+RMD160 77a15e9d8a31a9f215ca6b23f9b690d61e8a046f ChangeLog 8518
+SHA256 b17cb078639c7618f553ce65b8b3510517a8fe0dbf687b5c3fe21ad7f7f8ecc6 ChangeLog 8518
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -38,9 +38,9 @@ MD5 c76b57d4f195ef218e73e050c78cbb91 files/digest-xfsdump-2.2.45 250
 RMD160 2cb9607009f717ff25359e52d0234856fae07131 files/digest-xfsdump-2.2.45 250
 SHA256 32887c2122498f835588644f8ca70f8f98c489a395b05f5f9eee6f9115be9187 files/digest-xfsdump-2.2.45 250
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFGc1kbKhnDs22gwa8RAns/AKCIxTbVHO8jazYBLbwIPO9lmQEm1wCfdRk9
-03QAIYAnBgcEh2hKi+3mwXY=
-=W+SU
+iD8DBQFG0G8qp/wUKkr7RBoRAj5DAKCvxx0uK5HTUTVLpgZTZcjcUG55MgCgsPBn
+Ti6uZJ/7SPWf7xac2Aty7tU=
+=xLUe
 -----END PGP SIGNATURE-----
