@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/xfsdump
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.53 2007/06/16 03:29:27 angelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.54 2007/08/25 18:03:03 vapier Exp $
+
+  25 Aug 2007; Mike Frysinger <vapier@gentoo.org> xfsdump-2.2.45.ebuild:
+  Pull in gettext at build time #161179.
 
   16 Jun 2007; Christoph Mende <angelos@gentoo.org> xfsdump-2.2.45.ebuild:
   Stable on amd64 wrt security bug 180367
